# yacs

./: .gitignore  README.md  config.toml  main.py  pyproject.toml  tags.txt
app/: __init__.py  app.py  db.py  definitions.py
app/static/: admin.js  room.js  style.css
app/templates/: index.jinja  room.jinja
docs/: manual.md
sql/: schema.sql
