[project]
name = "YACScript"
version = "0.3.2"
description = "yet another chatroom script."
readme = "README.md"
requires-python = ">=3.13"
license-files = ["COPYING"]
authors = [
    {name = "Valine0x", email = "me@valine0x.icu"}
]
dependencies = [
    "bbcode>=1.1.0",
    "captcha>=0.7.1",
    "click>=8.2.1",
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "gevent>=25.5.1",
    "webargs>=8.7.0",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""

[project.scripts]
yacs-run = "app:main"
